objects/Purchase_Request_Lines__c.object
<CustomObject>
    <fields>
        <fullName>Capital_or_Expenses__c</fullName>
        <label>Account As</label>
        <picklist>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>110-Bus Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>190-Alloc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>310-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>321-Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>331-Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>380-Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>410-Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>412-Marketing Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>414-Corporate Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>416-Marketing Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>418-Channel Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>450-Bus Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>510-Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>520-Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>710-Operations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <label>GL Account</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <formula>Qty__c  *  Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>100002-Gartner Data Center-2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100004-Gartner Demand-Lead Gen-2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100007-Demand-Lead Gen Campaign Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100008-SCTP Training Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100009-Vendor Exp-Eric C Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100012-Sales Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100013-Marketing Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100014-Marketing Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100015-Marketing Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100016-CRM Development and Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100017-General Marketing Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100018-Salesforce Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100019–Corporate Website Redesign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100020-Vendor Exp-Melanie C Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100021-Tele-Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100022-MO Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100024-Contact Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100026-Velocity 2013 LNL Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100027-Online Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100028-Marketing Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100030-EMC World 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100031-VMworld 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100032-MDF-Eric Morin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100033-MDF-Colm Foley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100034-MDF-Glenn Zaffree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100035-MDF-Katie Tracy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100036-MDF-Michele Pietruszynski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100037-MDF-Nancy Bradford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100038-MDF-Todd Cleveland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100039-NetApp Insight 2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchasing_Request__c</fullName>
        <label>Purchasing Request</label>
        <referenceTo>Purchasing_Request__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Qty</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Purchase Request Line</label>
    <nameField>
        <displayFormat>PRL-{00000}</displayFormat>
        <label>PR Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Request Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>